<resources>
    <string name="app_name">MemoApp</string>
    <string name="splashtext">welcome to splash screen</string>
    <string name="login_btn">LOGIN</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="password_txt">password</string>
    <string name="email_txt">Email</string>
    <string name="signup">SIGNUP</string>
    <string name="register_btn">REGISTER</string>
    <string name="title">Title</string>
    <string name="note_title">note title</string>
    <string name="updated_time">updated time</string>
    <string name="add_notes">Add Notes</string>
    <string name="description">description</string>
</resources>
