<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_memo"
    android:orientation="vertical"
    android:background="@drawable/bg2"
   >


    <EditText
        android:id="@+id/new_memo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:background="@android:color/transparent">
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp">

    </View>

    <EditText
        android:id="@+id/new_memo_desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:layout_weight="1">

    </EditText>

    <Button
        android:id="@+id/newaddmemo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/add_notes"
        android:background="@color/thm3"
        android:textSize="30sp"
        android:layout_margin="10dp">

    </Button>

</LinearLayout>